@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+CRE: display item property in treasure panel.
+Nicolas Weeger 2010-04-16
+
 CRE: report definition is now managed like filters.
 Add quick item filter.
 Nicolas Weeger 2010-04-16
